@@ -1,14 +1,6 @@
-MD5 7677a77b27bde1e667556ce0c5925720 ChangeLog 2201
+MD5 d4bdc98e12116501a7ad168c25e6c397 filelight-1.0_beta4.ebuild 715
 MD5 87de0cf9e442ab5e488af5999f510f74 filelight-0.6.4.1-r1.ebuild 642
-MD5 9da09b5791415d0b1b75af8b4a813416 filelight-0.6.4.1.ebuild 532
-MD5 d36d1e7ff0f573a55f63512c2c6b0859 filelight-1.0_beta1.ebuild 643
-MD5 f5980c68e0400f847c45f786989cb796 filelight-1.0_beta2-r1.ebuild 718
-MD5 deb32a8279ed0f821650ee4fe2877d85 filelight-1.0_beta2-r2.ebuild 787
-MD5 2cfbe2c107dca3fb12b43805ce6b5c39 filelight-1.0_beta2.ebuild 643
+MD5 929823529f7e42e68debbf039aca1f95 ChangeLog 2499
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
-MD5 a9c5dd52f323f7bcea2c21a3cc5c2210 files/digest-filelight-0.6.4.1 69
+MD5 8d0f05081e0b72f7dae9c28fdbdee71b files/digest-filelight-1.0_beta4 72
 MD5 a9c5dd52f323f7bcea2c21a3cc5c2210 files/digest-filelight-0.6.4.1-r1 69
-MD5 9783f32c2b7f0d478632e43fc9104d03 files/digest-filelight-1.0_beta1 72
-MD5 e1f0425ca083f593d2be6aa3b41d41a0 files/digest-filelight-1.0_beta2 72
-MD5 e1f0425ca083f593d2be6aa3b41d41a0 files/digest-filelight-1.0_beta2-r1 72
-MD5 e1f0425ca083f593d2be6aa3b41d41a0 files/digest-filelight-1.0_beta2-r2 72
