@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.0_beta1.ebuild,v 1.1 2004/10/30 18:00:42 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.0_beta4.ebuild,v 1.1 2004/11/10 22:09:38 carlo Exp $
 
 inherit kde
 
@@ -11,16 +11,16 @@ DESCRIPTION="Filelight is a tool to display where the space is used on the hardd
 HOMEPAGE="http://www.methylblue.com/filelight/"
 SRC_URI="http://www.methylblue.com/filelight/${MY_P}.tar.bz2"
 
+SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~amd64"
-IUSE="arts"
+KEYWORDS="~x86 ~ppc ~amd64 ~hppa ~sparc"
+IUSE=""
 
-need-kde 3
+need-kde 3.2
 
 src_compile() {
-	local myconf
-
-	use arts || myconf="${myconf} --without-arts"
+	# Unconditionally use -fPIC for libs (#55238)
+	sed -e '/^CPPFLAGS/s/$/ -fPIC/' -i src/part/radialmap/Makefile.in
 
 	kde_src_compile all
 }
